--- a/storage/templates/storage/redesign/storage_blocks/avia_box.html
+++ b/storage/templates/storage/redesign/storage_blocks/avia_box.html
@@ -37,7 +37,7 @@
             <img class="box__picImg" src="{% static 'img/ice_chest.png' %}" alt="" style="object-fit: contain">
 
             <button class="box__picBtn">
-                <span>У вас нет сундуков</span>
+                <span>{% trans 'У вас нет сундуков' context "lootbox" %}</span>
                 <svg width="90" height="90" viewBox="0 0 90 90" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M45 0C33.0653 3.35549e-05 21.6194 4.7411 13.1802 13.1802C4.7411 21.6194 3.35549e-05 33.0653 0 45C3.34951e-05 56.9347 4.7411 68.3806 13.1802 76.8198C21.6194 85.2589 33.0653 90 45 90C56.9347 90 68.3806 85.2589 76.8198 76.8198C85.2589 68.3806 90 56.9347 90 45C90 33.0653 85.2589 21.6194 76.8198 13.1802C68.3806 4.7411 56.9347 3.34951e-05 45 0ZM45 8.01812C54.8082 8.01815 64.2147 11.9145 71.1501 18.8499C78.0855 25.7853 81.9818 35.1918 81.9819 45C81.9818 54.8082 78.0855 64.2147 71.1501 71.1501C64.2147 78.0855 54.8082 81.9818 45 81.9819C35.1918 81.9818 25.7853 78.0855 18.8499 71.1501C11.9145 64.2147 8.01815 54.8082 8.01812 45C8.01815 35.1918 11.9145 25.7853 18.8499 18.8499C25.7853 11.9145 35.1918 8.01815 45 8.01812ZM44.5345 24.7951C42.5323 24.7951 40.9205 26.4069 40.9205 28.4091V40.9205H28.4091C26.4069 40.9205 24.7951 42.5323 24.7951 44.5345V45.4655C24.7951 47.4677 26.4069 49.0795 28.4091 49.0795H40.9205V61.5909C40.9205 63.5931 42.5323 65.2049 44.5345 65.2049H45.4655C47.4677 65.2049 49.0795 63.5931 49.0795 61.5909V49.0795H61.5909C63.5931 49.0795 65.2049 47.4677 65.2049 45.4655V44.5345C65.2049 42.5323 63.5931 40.9205 61.5909 40.9205H49.0795V28.4091C49.0795 26.4069 47.4677 24.7951 45.4655 24.7951H44.5345Z"
@@ -205,9 +205,25 @@
             <li class="box__buyItem" style="justify-content: space-evenly;">
                 <img src="/static/img/ice_chest.png" alt="">
 
-                <span>x&nbsp;
-                    <input id="count" name="count" type="number" class="search-modal__withInput-input" min="1" value="1">
+                <div style=" display: flex; flex-direction: column;">
+
+                <input id="count" name="count" type="number" class="search-modal__withInput-input" min="1" value="1" max="{{ limit }}">
+                <span class="search-modal__withInput-text" id="stocks_value" style="font-size: 16rem;color: var(--c10two); border-bottom: 1px dashed var(--c10two); CURSOR: pointer;text-align: right;">
+                    макс: {{ limit }}
                 </span>
+                    <script>
+                        document.getElementById("stocks_value").addEventListener("click", function() {
+                            const inputElement = document.getElementById("count");
+                            const maxValue = inputElement.getAttribute("max"); // Получаем значение атрибута max
+
+                            if (maxValue) {
+                                inputElement.value = maxValue; // Устанавливаем значение
+                                const event = new Event("input", { bubbles: true }); // Создаем событие "input"
+                                inputElement.dispatchEvent(event); // Вызываем событие
+                            }
+                        });
+                    </script>
+                </div>
 
                 <div>
                     <span style="font-size: 14rem;">$</span>
@@ -253,7 +269,10 @@
                 });
             </script>
         </ul>
-
+        {% else %}
+        <p class="box__desc">
+            {% trans 'Вы скупили все сундуки за игровые средства. Новые предложения появятся через сутки' context "lootbox" %}
+        </p>
         {% endif %}
 
         <p class="box__desc" style="margin-top: 50rem;">
